# one-billion-rows-rs

./: Cargo.toml  README.md  expected_output_1000.txt  expected_output_100_000.txt  expected_output_10_000.txt  expected_output_20.txt  measurements_1000.txt  measurements_100_000.txt  measurements_10_000.txt  measurements_20.txt
.cargo/: config.toml
src/: input.rs  lib.rs  scalar.rs  temperature.rs
src/simd/: generic_impl.rs  mod.rs  vbmi_impl.rs
