[package]
name = "one-billion-rows-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
#panic = "abort"

[dependencies]
# Provides FxHash used within rustc
rustc-hash = "1.1"
# For memory mapping
memmap = "0.7.0"

[dev-dependencies]
paste = "1"

[features]
nightly = []
simd = ["nightly"]
default = ["simd"]
